Finished the initial quiz and created files for high scores

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a href="#">View Highscores</a>
+    <a href="/Scores.html">View Highscores</a>
 
     <div id="wrapper">
         <div id="timer"></div>
@@ -17,10 +17,9 @@
         <div id="questions">
             <h1>Coding Quiz Challenge</h1>
             <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
-
-            <ul id="answers"></ul>
-            <button id="start">Start Quiz</button>  
+  
         </div>
+        <button id="start">Start Quiz</button>
 
     </div>
     <script src="./assets/script.js"></script>
