Deployment Fix link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a href="/Scores.html">View Highscores</a>
+    <a href="Scores.html">View Highscores</a>
 
     <div id="wrapper">
         <div id="timer"></div>
