--- a/Scores.html
+++ b/Scores.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>High Scores</title>
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
             <button id="clear" value="reset">Clear Highscore</button>
         </div>
     </div>
-    <script src="/assets/scores.js"></script>
+    <script src="./assets/scores.js"></script>
 </body>
 
 </html>
